ad models Author, Post

--- a/static/index.html
+++ b/static/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-  <form name="publish" id="publish">
+  <form name="publish" id="publish" hidden>
     <input type="text" name="message" maxlength="50" />
     <input type="submit" value="Send" />
   </form>
-  <ul id="messages"></ul>
+  <dl id="messages"></dl>
 
   <script src="./index.js"></script>
 </body>
